--- a/Estilos.css
+++ b/Estilos.css
@@ -26,21 +26,21 @@ body{
     
 }
 #contenidod {
-    background-color: rgb(63, 165, 42);
+    background: rgb(63, 165, 42);
     float: left;
     width: 70%; 
     height: 300px;
     max-height: 100%; 
 }
 #contenidoi {
-    background-color: rgb(255, 217, 0);
+    background: rgb(255, 217, 0);
     float: right;
     width: 30%;
     height: 300px;
     max-height: 100%;
 }
 #pie {
-    background-color: rgb(0, 0, 0);
+    background: rgb(0, 0, 0);
     clear: both;
 }
 nav ul li{
